--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,6 +14,7 @@
     "@permaweb/aoconnect": "^0.0.56",
     "@tanstack/react-query": "^5.51.9",
     "arweave-wallet-kit": "^1.0.4",
+    "framer-motion": "^11.11.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
