--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.51.9",
     "arweave-wallet-kit": "^1.0.4",
     "framer-motion": "^11.11.8",
+    "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
