--- a/ao/random_function/processes.yaml
+++ b/ao/random_function/processes.yaml
@@ -2,13 +2,13 @@
 ## This file is used to configure the AoForm package
 ## For more information, visit https://github.com/Autonomous-Finance/aoform
 
-- name: random-function
+- name: random_function
   file: build/process.lua
   prerun: ./src/reset_modules.lua
   scheduler: _GQ33BkPtZrqxA84vM8Zk-N2aO0toNNu_C-l-rawrBA
   module: GYrbbe0VbHim_7Hi6zrOpHQXrSQz07XNtwCnfbFo2I0
   tags:
     - name: Name
-      value: random-function
+      value: random_function
     - name: Powered-By
       value: create-ao-dapp
